Add a node for missingno

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -2,7 +2,7 @@
 #
 # Documentation for this file format can be found in "The Data Catalog"
 # Link: https://kedro.readthedocs.io/en/stable/05_data/01_data_catalog.html
-breast_cancer:
+input_dataset:
   type: pandas.CSVDataSet
   filepath: data/01_raw/breast_cancer_wisconsin_diagnostic.csv
 
@@ -10,3 +10,10 @@ breast_cancer:
 pandas_profile:
   type: text.TextDataSet
   filepath: data/08_reporting/pandas_profile.html
+
+missing_no:
+  type: matplotlib.MatplotlibWriter
+  filepath: data/08_reporting/missing_no.pdf
+  save_args:
+    bbox_inches: tight
+    format: pdf
