--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -4,6 +4,7 @@
 # Link: https://kedro.readthedocs.io/en/stable/05_data/01_data_catalog.html
 input_dataset:
   type: pandas.CSVDataSet
+  # filepath: data/01_raw/test.csv
   filepath: data/01_raw/breast_cancer_wisconsin_diagnostic.csv
 
 
@@ -11,9 +12,9 @@ pandas_profile:
   type: text.TextDataSet
   filepath: data/08_reporting/pandas_profile.html
 
-missing_no:
-  type: matplotlib.MatplotlibWriter
-  filepath: data/08_reporting/missing_no.pdf
-  save_args:
-    bbox_inches: tight
-    format: pdf
+# missing_no:
+#   type: matplotlib.MatplotlibWriter
+#   filepath: data/08_reporting/missing_no.pdf
+#   save_args:
+#     bbox_inches: tight
+#     format: pdf
