ENH: Add utils for general params

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -4,9 +4,15 @@
 # Link: https://kedro.readthedocs.io/en/stable/05_data/01_data_catalog.html
 input_dataset:
   type: pandas.CSVDataSet
-  # filepath: data/01_raw/test.csv
-  filepath: data/01_raw/breast_cancer_wisconsin_diagnostic.csv
+  filepath: data/01_raw/titanic.csv
 
+dev_dataset:
+  type: pandas.CSVDataSet
+  filepath: data/02_intermediate/dev_dataset.csv
+
+holdout_dataset:
+  type: pandas.CSVDataSet
+  filepath: data/02_intermediate/holdout_dataset.csv
 
 pandas_profile:
   type: text.TextDataSet
