--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,10 +5,13 @@ isort~=5.0
 jupyter~=1.0
 jupyter_client>=5.1, <7.0
 jupyterlab~=3.0
-kedro==0.17.6
+kedro==0.18.0
+kedro-viz==4.4.0
 kedro-telemetry~=0.1.0
 nbstripout~=0.4
 pytest-cov~=3.0
 pytest-mock>=1.7.1, <2.0
 pytest~=6.2
 wheel>=0.35, <0.37
+scikit-learn==1.0.2
+pandas_profiling==3.1.0
