ENH: Add classification report
ENH: Add classification report

.

.

.

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -31,8 +31,8 @@ feat_selection_k_best_metrics:
   filepath: data/03_primary/feat_selection_k_best/metrics.csv
 
 feat_selection_report:
-  type: pandas.CSVDataSet
-  filepath: data/08_reporting/feat_selection_report.csv
+  type: text.TextDataSet
+  filepath: data/08_reporting/feat_selection_report.html
 
 category_encoder:
   type: pickle.PickleDataSet
