--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,6 +38,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r src/requirements.txt
         pip install -r src/requirements_dev.txt
+        pip install -r src/press_start/pipelines/nlp_visualization/requirements.txt
     - name: Run black
       run:
         black --check src --exclude docs/
