ENH: Register clustering models from sklearn

--- a/conf/base/catalog.yml
+++ b/conf/base/catalog.yml
@@ -75,3 +75,7 @@ nlp_cluster_labels:
 nlp_visualization:
   type: text.TextDataSet
   filepath: data/08_reporting/nlp_visualization.html
+
+example_dataset_iris:
+  type: pandas.CSVDataSet
+  filepath: data/01_raw/example_dataset_iris.csv
