--- a/conf/base/parameters.yml
+++ b/conf/base/parameters.yml
@@ -1,3 +1,9 @@
+example_clustering:
+  drop_columns:
+    - target
+  kmeans:
+    n_clusters: 2
+
 pandas_profiling:
   _run: false
   sample_fraction: 1.0
